hphp/hack/test/typecheck/coeffects/local/byval_collection_as_property.php.exp
File "byval_collection_as_property.php", line 9, characters 7-32:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "byval_collection_as_property.php", line 7, characters 39-40:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "byval_collection_as_property.php", line 10, characters 7-36:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "byval_collection_as_property.php", line 7, characters 39-40:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "byval_collection_as_property.php", line 16, characters 3-31:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "byval_collection_as_property.php", line 15, characters 20-21:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
